// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles "yes" postback with no other existing feedbacks 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AWDZYXxAyCdS-nWhumlz",
      "5483323992880-rumor",
      "AV-Urc0jyCdS-nWhuity",
      "AVsh8u7StKp96s659Dgq",
    ],
    "foundReplyIds": Array [
      "AWDZeeV0yCdS-nWhuml8",
    ],
    "searchedText": "貼圖",
    "selectedArticleId": "AWDZYXxAyCdS-nWhumlz",
    "selectedReplyId": "AWDZeeV0yCdS-nWhuml8",
  },
  "event": Object {
    "input": "y",
    "postback": Object {
      "data": "{\\"input\\":\\"y\\",\\"issuedAt\\":1519019701265}",
    },
    "timestamp": 1519019734813,
    "type": "postback",
  },
  "isSkipUser": false,
  "issuedAt": 1519019735467,
  "replies": Array [
    Object {
      "text": "感謝您的回饋，您是第一個評論這個回應的人 :)",
      "type": "text",
    },
    Object {
      "text": "💁 若您認為自己能回應得更好，歡迎到 https://cofacts.g0v.tw/article/AWDZYXxAyCdS-nWhumlz 提交新的回應唷！",
      "type": "text",
    },
  ],
  "state": "__INIT__",
  "userId": "Uaddc74df8a3a176b901d9d648b0fc4fe",
}
`;

exports[`handles "yes" postback with other existing feedbacks 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AWDZYXxAyCdS-nWhumlz",
      "5483323992880-rumor",
      "AV-Urc0jyCdS-nWhuity",
      "AVsh8u7StKp96s659Dgq",
    ],
    "foundReplyIds": Array [
      "AWDZeeV0yCdS-nWhuml8",
    ],
    "searchedText": "貼圖",
    "selectedArticleId": "AWDZYXxAyCdS-nWhumlz",
    "selectedReplyId": "AWDZeeV0yCdS-nWhuml8",
  },
  "event": Object {
    "input": "y",
    "postback": Object {
      "data": "{\\"input\\":\\"y\\",\\"issuedAt\\":1519019701265}",
    },
    "timestamp": 1519019734813,
    "type": "postback",
  },
  "isSkipUser": false,
  "issuedAt": 1519019735467,
  "replies": Array [
    Object {
      "text": "感謝您與其他 1 人的回饋。",
      "type": "text",
    },
    Object {
      "text": "💁 若您認為自己能回應得更好，歡迎到 https://cofacts.g0v.tw/article/AWDZYXxAyCdS-nWhumlz 提交新的回應唷！",
      "type": "text",
    },
  ],
  "state": "__INIT__",
  "userId": "Uaddc74df8a3a176b901d9d648b0fc4fe",
}
`;
